some bugs fixed

--- a/views/skill_admin.ejs
+++ b/views/skill_admin.ejs
@@ -2,7 +2,7 @@
     <main>
         <section class="section-skill h-75 bg-white pl-5 pt-4 pr-5">
 
-            <form method="POST" action="/api/blog">
+            <form method="POST" action="/api/skill">
                 <input type="text" name="id" class="input-elements" hidden>
                 <div class="input-group mb-4">
                     <div class="input-group-prepend ">
